--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@headlessui/react": "^1.7.17",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.11",
-    "@tanstack/react-query": "^5.8.1",
-    "axios": "^1.6.1",
+    "@tanstack/react-query": "^5.8.3",
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "firebase": "^10.6.0",
     "query-string": "^8.1.0",
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
